[gd_scene load_steps=3 format=3 uid="uid://cgnr7nmxjybwm"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_005ci"]
[ext_resource type="PackedScene" uid="uid://bj04gl2cjqbou" path="res://scenes/option_menu/option_menu.tscn" id="2_pd41a"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_005ci")
metadata/_edit_use_anchors_ = true

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
columns = 2

[node name="VBoxContainer2" type="GridContainer" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/GridContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/GridContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 35
text = "GAME TITLE (replace with the logo)
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Logo" type="TextureRect" parent="MarginContainer/GridContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Seperator2" type="Control" parent="MarginContainer/GridContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GridContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/GridContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Start_Button" type="Button" parent="MarginContainer/GridContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(360, 96)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "JOUER"

[node name="Seperator3" type="Control" parent="MarginContainer/GridContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Option_Button" type="Button" parent="MarginContainer/GridContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(360, 96)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "OPTIONS"

[node name="Seperator4" type="Control" parent="MarginContainer/GridContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit_Button" type="Button" parent="MarginContainer/GridContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(360, 96)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "QUITTER
"

[node name="Option_Menu" parent="." instance=ExtResource("2_pd41a")]
visible = false
layout_mode = 1
